--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 #
 
 # no trailing slash
-url: http://surajrampure.com
+url: https://rampure.org
 
 # for header and meta tags
 title: Suraj Rampure
