--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: http://rampure.org
 
 # for header and meta tags
 title: Suraj Rampure
-description: EECS M.S. student at UC Berkeley.
+description: Lecturer, Halıcıoğlu Data Science Institute, UC San Diego
 
 # set external to true if linking outside your website
 # for internal, make sure to include preceding slash
