--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ nav-links:
     external: false
 
 # for the homepage image + big text next to it
-greeting_image: /assets/me.png
+greeting_image: /assets/me-2021.png
 # 100-200 characters recommended
 # greeting_text:
 # show blog post excerpts on blog page
