updates to tiles

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: https://rampure.org
 
 # for header and meta tags
 title: Suraj Rampure
-description: Lecturer, Halıcıoğlu Data Science Institute, UC San Diego
+description: Lecturer, CSE, University of Michigan
 
 # set external to true if linking outside your website
 # for internal, make sure to include preceding slash
