--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           echo '{
             "city": "${{ github.event.client_payload.city }}",
             "updated": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'"
-          }' > data/location.json
+          }' > location.json
           
       - name: Commit changes
         run: |
